--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "embla-carousel-react": "7.0.0-rc01",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
     "next": "12.2.0",
