--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-rating": "^2.0.5",
     "zustand": "4.0.0-rc.1"
   },
   "devDependencies": {
