--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "7.0.0-rc01",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
+    "lottie-web": "^5.9.6",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
