--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/raleway": "^4.5.9",
     "embla-carousel-react": "7.0.0-rc01",
-    "framer-motion": "^6",
+    "framer-motion": "^6.3.16",
     "graphql": "^16.5.0",
     "lottie-web": "^5.9.6",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
     "react-rating": "^2.0.5",
     "zustand": "4.0.0-rc.1"
   },
